--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,6 +1,7 @@
 <h1>New Bookmark</h1>
 
 <form action="<%= bookmarks_path %>" method="POST">
+<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <p>
     <label for="name">Name:</label>
     <input type="text" name="name" id="name" />
@@ -8,5 +9,8 @@
   <p>
     <label for="url">URL:</label>
     <input type="text" name="url" id="url" />
+  </p>
+  <p>
+    <input type="submit" value="Add Bookmark" />
   </p>
 </form>
